--- a/.github/workflows/check-release.yml
+++ b/.github/workflows/check-release.yml
@@ -58,16 +58,16 @@ jobs:
         for ARCH in arm64 armv7; do
           # 下载文件
           URL="https://github.com/MetaCubeX/mihomo/releases/download/${{ steps.get_version.outputs.latest_version }}/mihomo-linux-${ARCH}-${{ steps.get_version.outputs.latest_version }}.gz"
-          wget -O mihomo.gz "$URL"
+          wget -O mihomo-linux-${ARCH}-${{ steps.get_version.outputs.latest_version }}.gz "$URL"
           
           # 解压
-          gunzip mihomo.gz
+          gunzip mihomo-linux-${ARCH}-${{ steps.get_version.outputs.latest_version }}.gz
           
           # UPX压缩
-          upx --lzma mihomo-upx
+          upx --lzma mihomo-linux-${ARCH}
           
           # 打包
-          tar czvf artifacts/mihomo-upx-${ARCH}.tar.gz mihomo-upx
+          tar czvf artifacts/mihomo-linux-${ARCH}-${{ steps.get_version.outputs.latest_version }}.tar.gz mihomo-linux-${ARCH}
           rm mihomo*
         done
 
@@ -88,8 +88,8 @@ jobs:
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./artifacts/mihomo-upx-arm64.tar.gz
-        asset_name: mihomo-upx-arm64.tar.gz
+        asset_path: ./artifacts/mihomo-linux-arm64-${{ steps.get_version.outputs.latest_version }}.tar.gz
+        asset_name: mihomo-linux-arm64-${{ steps.get_version.outputs.latest_version }}.tar.gz
         asset_content_type: application/gzip
 
     - name: Upload armv7 asset
@@ -97,8 +97,8 @@ jobs:
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./artifacts/mihomo-upx-armv7.tar.gz
-        asset_name: mihomo-upx-armv7.tar.gz
+        asset_path: ./artifacts/mihomo-linux-armv7-${{ steps.get_version.outputs.latest_version }}.tar.gz
+        asset_name: mihomo-linux-armv7-${{ steps.get_version.outputs.latest_version }}.tar.gz
         asset_content_type: application/gzip
 
     - name: Update version file
