--- a/.github/workflows/check-release.yml
+++ b/.github/workflows/check-release.yml
@@ -49,7 +49,7 @@ jobs:
       run: |
         # 安装依赖
         sudo apt-get update
-        sudo apt-get install -y upx
+        sudo apt-get install -y upx gunzip
 
         # 创建工作目录
         mkdir -p artifacts
