--- a/.github/workflows/check-release.yml
+++ b/.github/workflows/check-release.yml
@@ -58,10 +58,10 @@ jobs:
         for ARCH in arm64 armv7; do
           # 下载文件
           URL="https://github.com/MetaCubeX/mihomo/releases/download/${{ steps.get_version.outputs.latest_version }}/mihomo-linux-${ARCH}-${{ steps.get_version.outputs.latest_version }}.gz"
-          wget -O mihomo-linux-${ARCH}-${{ steps.get_version.outputs.latest_version }}.gz "$URL"
+          wget -O mihomo-linux-${ARCH}.gz "$URL"
           
           # 解压
-          gzip -d mihomo-linux-${ARCH}-${{ steps.get_version.outputs.latest_version }}.gz
+          gzip -d mihomo-linux-${ARCH}.gz
           
           # UPX压缩
           upx --lzma mihomo-linux-${ARCH}
