--- a/.github/workflows/check-release.yml
+++ b/.github/workflows/check-release.yml
@@ -72,14 +72,18 @@ jobs:
           # 打包
           tar czvf artifacts/mihomo-linux-${ARCH}-${{ steps.get_version.outputs.latest_version }}.tar.gz mihomo-linux-${ARCH}
           rm mihomo*
+          
+          # 清理临时文件
+          rm mihomo-linux-${ARCH}.gz mihomo-linux-${ARCH}
         done
 
     - name: Create new release
-      if: steps.compare_versions.outputs.update_available == 'true'
+      if: env.update_available == 'true'
+      id: create_release
       uses: actions/create-release@v1
       with:
-        tag_name: ${{ steps.get_version.outputs.latest_version }}
-        release_name: "UPX Compressed ${{ steps.get_version.outputs.latest_version }}"
+        tag_name: ${{ env.latest_version }}
+        release_name: "UPX Compressed ${{ env.latest_version }}"
         body: "Pre-compressed binaries using UPX --lzma --ultra-brute"
         draft: false
         prerelease: false
@@ -87,29 +91,29 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Upload assets
-      if: steps.compare_versions.outputs.update_available == 'true'
+      if: env.update_available == 'true'
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./artifacts/mihomo-linux-arm64-${{ steps.get_version.outputs.latest_version }}.tar.gz
-        asset_name: mihomo-linux-arm64-${{ steps.get_version.outputs.latest_version }}.tar.gz
+        asset_path: ./artifacts/mihomo-linux-arm64-${{ env.latest_version }}.tar.gz
+        asset_name: mihomo-linux-arm64-${{ env.latest_version }}.tar.gz
         asset_content_type: application/gzip
 
     - name: Upload armv7 asset
-      if: steps.compare_versions.outputs.update_available == 'true'
+      if: env.update_available == 'true'
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./artifacts/mihomo-linux-armv7-${{ steps.get_version.outputs.latest_version }}.tar.gz
-        asset_name: mihomo-linux-armv7-${{ steps.get_version.outputs.latest_version }}.tar.gz
+        asset_path: ./artifacts/mihomo-linux-armv7-${{ env.latest_version }}.tar.gz
+        asset_name: mihomo-linux-armv7-${{ env.latest_version }}.tar.gz
         asset_content_type: application/gzip
 
     - name: Update version file
-      if: steps.compare_versions.outputs.update_available == 'true'
+      if: env.update_available == 'true'
       run: |
-        echo "${{ steps.get_version.outputs.latest_version }}" > version.txt
+        echo "${{ env.latest_version }}" > version.txt
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
         git add version.txt
-        git commit -m "Update to ${{ steps.get_version.outputs.latest_version }}"
+        git commit -m "Update to ${{ env.latest_version }}"
         git push
