--- a/.github/workflows/check-release.yml
+++ b/.github/workflows/check-release.yml
@@ -63,6 +63,9 @@ jobs:
           # 解压文件
           gzip -d "mihomo-linux-${ARCH}.gz"  # 解压后会生成 mihomo-linux-${ARCH}
           
+          # 添加可执行权限
+          chmod +x "mihomo-linux-${ARCH}"
+          
           # UPX压缩（直接覆盖原文件）
           upx --lzma "mihomo-linux-${ARCH}"
           
