--- a/.github/workflows/check-release.yml
+++ b/.github/workflows/check-release.yml
@@ -77,14 +77,16 @@ jobs:
         done
 
     - name: Create new release
+      if: env.update_available == 'true'
       id: create_release
-      uses: actions/create-release@v1
+      uses: softprops/action-gh-release@v1
       with:
         tag_name: ${{ env.latest_version }}
-        release_name: "Compressed ${{ env.latest_version }}"
+        name: "Compressed ${{ env.latest_version }}"
         body: "Pre-compressed binaries using UPX --lzma --ultra-brute"
         draft: false
         prerelease: false
+        overwrite: true  # 覆盖已存在的 Release
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -96,6 +98,8 @@ jobs:
         asset_path: ./artifacts/mihomo-linux-arm64-${{ env.latest_version }}.tar.gz
         asset_name: mihomo-linux-arm64-${{ env.latest_version }}.tar.gz
         asset_content_type: application/gzip
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Upload armv7 asset
       if: env.update_available == 'true'
@@ -105,6 +109,8 @@ jobs:
         asset_path: ./artifacts/mihomo-linux-armv7-${{ env.latest_version }}.tar.gz
         asset_name: mihomo-linux-armv7-${{ env.latest_version }}.tar.gz
         asset_content_type: application/gzip
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Update version file
       if: env.update_available == 'true'
