--- a/.github/workflows/check-release.yml
+++ b/.github/workflows/check-release.yml
@@ -69,14 +69,14 @@ jobs:
           # UPX压缩（直接覆盖原文件）
           upx --lzma "mihomo-linux-${ARCH}"
           
-          # 打包（不使用 upx 前缀）
+          # 打包
           tar czvf artifacts/mihomo-linux-${ARCH}-${{ env.latest_version }}.tar.gz "mihomo-linux-${ARCH}"
           
           # 清理临时文件
           rm "mihomo-linux-${ARCH}"
         done
 
-    - name: Create new release
+    - name: Create new release and upload assets
       if: env.update_available == 'true'
       id: create_release
       uses: softprops/action-gh-release@v1
@@ -86,29 +86,9 @@ jobs:
         body: "Pre-compressed binaries using UPX --lzma --ultra-brute"
         draft: false
         prerelease: false
-        overwrite: true  # 覆盖已存在的 Release
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Upload arm64 asset
-      if: env.update_available == 'true'
-      uses: actions/upload-release-asset@v1
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./artifacts/mihomo-linux-arm64-${{ env.latest_version }}.tar.gz
-        asset_name: mihomo-linux-arm64-${{ env.latest_version }}.tar.gz
-        asset_content_type: application/gzip
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Upload armv7 asset
-      if: env.update_available == 'true'
-      uses: actions/upload-release-asset@v1
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./artifacts/mihomo-linux-armv7-${{ env.latest_version }}.tar.gz
-        asset_name: mihomo-linux-armv7-${{ env.latest_version }}.tar.gz
-        asset_content_type: application/gzip
+        files: |
+          artifacts/mihomo-linux-arm64-${{ env.latest_version }}.tar.gz
+          artifacts/mihomo-linux-armv7-${{ env.latest_version }}.tar.gz
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
