--- a/.github/workflows/build-and-copy.yml
+++ b/.github/workflows/build-and-copy.yml
@@ -31,27 +31,6 @@ jobs:
         LATEST_TAG=$(curl -sL https://api.github.com/repos/MetaCubeX/mihomo/releases/latest | jq -r '.tag_name')
         echo "META_VERSION=${LATEST_TAG}" >> $GITHUB_ENV
 
-    - name: Get latest self commit
-      id: self-commit
-      run: |
-        CURRENT_COMMIT=$(git log -1 --pretty=format:'%H' -- MerlinClash2/)
-        echo "CURRENT_COMMIT=${CURRENT_COMMIT}" >> $GITHUB_ENV
-
-    - name: Compare versions
-      id: compare
-      run: |
-        if git show $CURRENT_COMMIT:MerlinClash2/version.txt | grep -q "${{ env.META_VERSION }}"; then
-          echo "No new version available"
-          echo "SKIP=true" >> $GITHUB_ENV
-        else
-          echo "New version detected"
-          echo "SKIP=false" >> $GITHUB_ENV
-        fi
-
-    - name: Exit if no update
-      if: env.SKIP == 'true'
-      run: exit 0
-
     - name: Setup Go
       uses: actions/setup-go@v5
       with:
@@ -87,21 +66,52 @@ jobs:
         cd ..
         upx --lzma --best clash
 
-        # 创建目标目录并移动文件
         mkdir -p MerlinClash2/${{ matrix.arch_pair.bin_dir }}
         mv clash MerlinClash2/${{ matrix.arch_pair.bin_dir }}/
         chmod +x MerlinClash2/${{ matrix.arch_pair.bin_dir }}/clash
 
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: binaries
+        path: MerlinClash2/
+        retention-days: 1
+
+  commit-and-push:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
+    - name: Download artifacts
+      uses: actions/download-artifact@v4
+      with:
+        name: binaries
+        path: MerlinClash2/
+
+    - name: Get version
+      run: echo "META_VERSION=$(cat MerlinClash2/version.txt)" >> $GITHUB_ENV
+
     - name: Update version file
-      run: |
-        echo ${{ env.META_VERSION }} > MerlinClash2/version.txt
+      run: echo "${{ env.META_VERSION }}" > MerlinClash2/version.txt
 
     - name: Commit changes
       run: |
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
         git add MerlinClash2/
-        git commit -m "Update to ${{ env.META_VERSION }}"
-        git push
+        
+        # 拉取最新更改并解决冲突
+        git pull origin main --rebase
+        
+        if git diff-index --quiet HEAD --; then
+          echo "No changes to commit"
+        else
+          git commit -m "Update to ${{ env.META_VERSION }}"
+          git push origin main
+        fi
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
