--- a/.github/workflows/build-and-copy.yml
+++ b/.github/workflows/build-and-copy.yml
@@ -1,117 +1,88 @@
-name: Auto Build Mihomo
+name: Update mihomo binaries
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # 每天UTC午夜检查
+    - cron: '0 0 * * *' # 每天UTC时间0点运行
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        arch_pair:
-          - arch: armv7
-            goarch: arm
-            goarm: 7
-            bin_dir: bin32
-          - arch: arm64
-            goarch: arm64
-            goarm: ""
-            bin_dir: bin64
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
+        token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Get latest MetaCubeX release
-      id: meta-release
+    - name: Get latest release
+      id: get-release
       run: |
         LATEST_TAG=$(curl -sL https://api.github.com/repos/MetaCubeX/mihomo/releases/latest | jq -r '.tag_name')
-        echo "META_VERSION=${LATEST_TAG}" >> $GITHUB_ENV
+        echo "latest_tag=$LATEST_TAG" >> $GITHUB_OUTPUT
 
-    - name: Setup Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: '1.21'
+    - name: Check existing version
+      id: check-version
+      run: |
+        if [ -f "MerlinClash2/version.txt" ]; then
+          CURRENT_VERSION=$(cat MerlinClash2/version.txt)
+          if [ "$CURRENT_VERSION" == "${{ steps.get-release.outputs.latest_tag }}" ]; then
+            echo "skip=true" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+        fi
+        echo "skip=false" >> $GITHUB_OUTPUT
 
-    - name: Install UPX
+    - name: Exit if no update needed
+      if: steps.check-version.outputs.skip == 'true'
+      run: exit 0
+
+    - name: Setup environment
+      run: |
+        TAG_NAME=${{ steps.get-release.outputs.latest_tag }}
+        wget "https://github.com/MetaCubeX/mihomo/archive/refs/tags/${TAG_NAME}.tar.gz"
+        tar -xzf "${TAG_NAME}.tar.gz"
+        DIR_NAME=$(tar -tzf "${TAG_NAME}.tar.gz" | head -1 | cut -f1 -d"/")
+        echo "DIR_NAME=$DIR_NAME" >> $GITHUB_ENV
+        rm "${TAG_NAME}.tar.gz"
+
+    - name: Modify build configuration
+      run: |
+        cd $DIR_NAME
+        sed -i 's/-tags with_gvisor//' Makefile
+
+    - name: Install build tools
       run: |
         sudo apt-get update
         sudo apt-get install -y upx
 
-    - name: Download source
+    - name: Build ARM binaries
       run: |
-        wget https://github.com/MetaCubeX/mihomo/archive/refs/tags/${{ env.META_VERSION }}.tar.gz
-        tar -xzf ${{ env.META_VERSION }}.tar.gz
-        mv mihomo-${META_VERSION#v} source
+        cd $DIR_NAME
+        make linux-armv7 linux-arm64
 
-    - name: Build ${{ matrix.arch_pair.arch }}
-      env:
-        GOOS: linux
-        GOARCH: ${{ matrix.arch_pair.goarch }}
-        GOARM: ${{ matrix.arch_pair.goarm }}
+    - name: Compress and rename binaries
       run: |
-        cd source
-        BUILDTIME=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
+        cd $DIR_NAME/bin
+        mkdir -p ../../MerlinClash2/{bin32,bin64}
         
-        CGO_ENABLED=0 go build \
-          -trimpath \
-          -ldflags "-X 'github.com/metacubex/mihomo/constant.Version=${{ env.META_VERSION }}' \
-                    -X 'github.com/metacubex/mihomo/constant.BuildTime=$BUILDTIME' \
-                    -w -s -buildid=linux-${{ matrix.arch_pair.arch }}" \
-          -o ../clash
-        
-        cd ..
-        upx --lzma --best clash
+        # ARMv7 重命名为 clash 并放入 bin32
+        upx --lzma mihomo-linux-armv7 -o ../../MerlinClash2/bin32/clash
+        # ARM64 重命名为 clash 并放入 bin64
+        upx --lzma mihomo-linux-arm64 -o ../../MerlinClash2/bin64/clash
 
-        mkdir -p MerlinClash2/${{ matrix.arch_pair.bin_dir }}
-        mv clash MerlinClash2/${{ matrix.arch_pair.bin_dir }}/
-        chmod +x MerlinClash2/${{ matrix.arch_pair.bin_dir }}/clash
+        # 验证文件
+        ls -la ../../MerlinClash2/bin32/clash
+        ls -la ../../MerlinClash2/bin64/clash
 
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: binaries
-        path: MerlinClash2/
-        retention-days: 1
-
-  commit-and-push:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-
-    - name: Download artifacts
-      uses: actions/download-artifact@v4
-      with:
-        name: binaries
-        path: MerlinClash2/
-
-    - name: Get version
-      run: echo "META_VERSION=$(cat MerlinClash2/version.txt)" >> $GITHUB_ENV
-
-    - name: Update version file
-      run: echo "${{ env.META_VERSION }}" > MerlinClash2/version.txt
+    - name: Update version record
+      run: |
+        echo "${{ steps.get-release.outputs.latest_tag }}" > MerlinClash2/version.txt
 
     - name: Commit changes
       run: |
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
         git add MerlinClash2/
-        
-        # 拉取最新更改并解决冲突
-        git pull origin main --rebase
-        
-        if git diff-index --quiet HEAD --; then
-          echo "No changes to commit"
-        else
-          git commit -m "Update to ${{ env.META_VERSION }}"
-          git push origin main
-        fi
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        git commit -m "chore: Update mihomo to ${{ steps.get-release.outputs.latest_tag }}"
+        git push
